# prototypical-networks

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  setup.py
protonet/: __init__.py  config.py  dataset.py  metric.py  model.py  sampler.py  trainer.py
scripts/: train_omniglot.py
